# GabrielBossardi-data-coding-interview

./: README.md
challenge_dev/: README.md  pyproject.toml
challenge_dev/infrastructure/: .env  Docker-compose.yml
challenge_dev/src/dbt/nyxa/: .user.yml  dbt_project.yml  profiles.yml
challenge_dev/src/dbt/nyxa/models/: sources.yml
challenge_dev/src/spark/: README.md  pyproject.toml
challenge_dev/src/spark/jobs/: nyxa_ingest.py
challenge_dev/src/spark/spark-submit-scripts/: run_script.sh
challenge_dev/src/spark/transformations/nyxa/: extract.py  load.py  map_fields.py
