[tool.poetry]
name = "BEON-Challenge"
version = "0.1.0"
description = ""
authors = ["Gabriel Bossardi <contato@gabrielbossardi.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
dbt-core = "^1.8.8"
dbt-postgres = "^1.8.2"
pyspark = "3.5.3"
pyarrow = "12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
